syntax = "proto3";

package ibc.applications.interchain_swap.v1;

option go_package = "github.com/ibcswap/ibcswap/v6/modules/apps/101-interchain-swap/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/tx/v1beta1/tx.proto";
import "ibc/core/client/v1/client.proto";
import "ibc/applications/interchain_swap/v1/market.proto";


// Msg defines the ibc/swap Msg service.
// Msg defines the Msg service.
// Msg defines the Msg service.
service Msg {
  rpc CreatePool (MsgCreatePoolRequest) returns (MsgCreatePoolResponse);
  rpc SingleAssetDeposit    (MsgSingleAssetDepositRequest   ) returns (MsgSingleAssetDepositResponse   );
  rpc MultiAssetDeposit    (MsgMultiAssetDepositRequest   ) returns (MsgMultiAssetDepositResponse   );
  rpc SingleAssetWithdraw   (MsgSingleAssetWithdrawRequest  ) returns (MsgSingleAssetWithdrawResponse  );
  rpc MultiAssetWithdraw   (MsgMultiAssetWithdrawRequest  ) returns (MsgMultiAssetWithdrawResponse  );
  rpc Swap       (MsgSwapRequest             ) returns (MsgSwapResponse      );
}
message MsgCreatePoolRequest {
           string sourcePort     = 1;
           string sourceChannel  = 2;
           string creator        = 3;
           string counterPartyCreator = 4;
  repeated PoolAsset liquidity = 5;
           uint32 swapFee = 6;
          bytes  counterPartySig = 7;
           ibc.core.client.v1.Height timeoutHeight = 8 [(gogoproto.moretags) = "yaml:\"timeout_height\""];
           uint64 timeoutTimeStamp  = 9;           
}

message MsgCreatePoolResponse {
  string poolId = 1;
}

message MsgSingleAssetDepositRequest {
           string                         poolId = 1 ;
           string                         sender = 2 ;
           cosmos.base.v1beta1.Coin       token = 3;
           ibc.core.client.v1.Height timeoutHeight = 4;
           uint64 timeoutTimeStamp  = 5;  
}

message MsgSingleAssetDepositResponse {
  cosmos.base.v1beta1.Coin poolToken = 1;
}

// demo two side deposit
message MsgMultiAssetDepositRequest {
  string        poolId = 1;
  repeated DepositAsset deposits = 2;
  ibc.core.client.v1.Height timeoutHeight = 3;
  uint64 timeoutTimeStamp  = 4; 
}

message DepositAsset {
  string sender = 1;
  cosmos.base.v1beta1.Coin balance = 2;
  bytes signature = 4;
}


message MsgMultiAssetDepositResponse {
  repeated cosmos.base.v1beta1.Coin poolTokens = 1;
}


message MsgMultiAssetWithdrawRequest {
  string poolId = 1;
  string sender = 2;
  repeated WithdrawAsset withdraws = 3;
  ibc.core.client.v1.Height timeoutHeight = 4;
  uint64 timeoutTimeStamp  = 5;  
}

message WithdrawAsset {
  string receiver = 1;
  cosmos.base.v1beta1.Coin balance = 2;
}

message MsgSingleAssetWithdrawRequest {
  string sender = 1;
  cosmos.base.v1beta1.Coin poolCoin = 3;
  ibc.core.client.v1.Height timeoutHeight = 4;
  uint64 timeoutTimeStamp  = 5;  
}

message MsgSingleAssetWithdrawResponse {
  repeated cosmos.base.v1beta1.Coin tokens = 1;
}

message MsgMultiAssetWithdrawResponse {
  repeated cosmos.base.v1beta1.Coin tokens = 1;
}

enum SwapMsgType {
  LEFT = 0;
  RIGHT = 1;
}
message MsgSwapRequest {
  SwapMsgType swap_type = 1;
  string sender    = 2;
  cosmos.base.v1beta1.Coin tokenIn = 3;
  cosmos.base.v1beta1.Coin tokenOut = 4;
  uint64 slippage  = 5;
  string recipient = 6;
  ibc.core.client.v1.Height timeoutHeight = 7;
  uint64 timeoutTimeStamp  = 8;   
}

message MsgSwapResponse {
  SwapMsgType swap_type = 1;
  repeated cosmos.base.v1beta1.Coin tokens = 2;
}

message DepositSignature {
  string sender = 1;
  cosmos.base.v1beta1.Coin balance = 2;
  uint64 sequence = 3;
}